[gd_scene load_steps=3 format=3 uid="uid://deb3dyukvp655"]

[ext_resource type="Script" path="res://scenes/opening_cutscene.gd" id="1_fopvd"]
[ext_resource type="Texture2D" uid="uid://ngljhutq0rmk" path="res://arts/icon.svg" id="2_l86hu"]

[node name="opening cutscene" type="Node2D"]
script = ExtResource("1_fopvd")

[node name="BlackScreen" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="LoadingScreen" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GodotLogo" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 523.0
offset_top = 268.0
offset_right = 708.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l86hu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GodotLogo"]

[node name="PanelContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel1" type="TextureRect" parent="PanelContainer"]
layout_mode = 0
offset_left = 32.0
offset_top = 102.0
offset_right = 160.0
offset_bottom = 230.0
texture = ExtResource("2_l86hu")

[node name="Panel2" type="TextureRect" parent="PanelContainer"]
layout_mode = 0
offset_left = 467.0
offset_top = 130.0
offset_right = 595.0
offset_bottom = 258.0
texture = ExtResource("2_l86hu")

[node name="Panel3" type="TextureRect" parent="PanelContainer"]
layout_mode = 0
offset_left = 796.0
offset_top = 125.0
offset_right = 924.0
offset_bottom = 253.0
texture = ExtResource("2_l86hu")

[node name="DialogueBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 796.0
offset_top = 125.0
offset_right = 836.0
offset_bottom = 165.0

[node name="ColorRect" type="ColorRect" parent="DialogueBox"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="DialogueBox"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TitleScreen" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
